# comicframes

./: .gitignore  ARCHITECTURE.md  GITHUB_SETUP.md  LICENSE  Makefile  README.md  pyproject.toml
.history/: .gitignore_20250822155742  PROJECT_STATUS_20250822155742.md  README_20250822155507.md
.history/examples/: advanced_usage_20250822155742.py  basic_usage_20250822155513.py
data_samples/: README.md
examples/: basic_usage.py
external_models/: README.md
scripts/: migrate_from_old_structure.py
src/comicframes/: __init__.py  cli.py  frame_detector.py  pdf_processor.py  utils.py
src/comicframes/cache/: __init__.py  cache_manager.py  file_cache.py  memory_cache.py
src/comicframes/config/: __init__.py  cache_config.py  model_config.py  settings.py
src/comicframes/core/: __init__.py  base_model.py  base_processor.py  data_structures.py  pipeline.py
src/comicframes/processing/: __init__.py  frame_processor.py  interpolation_processor.py  pdf_processor.py
tests/: __init__.py  test_frame_detector.py  test_utils.py
