[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comicframes"
version = "0.1.0"
description = "AI-powered comic book analysis with frame detection, interpolation, and animation creation using RIFE, FILM, and YOLO models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Comics Project"},
]
keywords = [
    "comics", 
    "computer-vision", 
    "frame-detection", 
    "animation", 
    "ai", 
    "machine-learning", 
    "opencv", 
    "yolo", 
    "rife", 
    "film", 
    "huggingface", 
    "pdf-processing", 
    "frame-interpolation",
    "speech-bubble-detection",
    "character-recognition",
    "comic-analysis",
    "panel-extraction",
    "manga",
    "graphic-novel",
    "visual-storytelling"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "pymupdf>=1.23.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
]

[project.scripts]
comicframes-extract = "comicframes.cli:extract_frames_cli"
comicframes-pdf = "comicframes.cli:pdf_to_images_cli"
comicframes-pipeline = "comicframes.cli:pipeline_cli"
comicframes-cache = "comicframes.cli:cache_cli"
comicframes-models = "comicframes.cli:models_cli"

[project.urls]
Homepage = "https://github.com/yourusername/comicframes"
Repository = "https://github.com/yourusername/comicframes"
Issues = "https://github.com/yourusername/comicframes/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
